[BE] refactor : 버전이 달랐던 be/feat/diet 를 받아 통합